# live.senkins.SeventhHeavenWrapper

./: .gitignore  README.md  cargo-sources.json  live.senkins.SeventhHeavenWrapper.yml  node-sources.json  regenerate-sources.sh
.github/: dependabot.yml
.github/workflows/: rust-clippy.yml
include/: Default.xml  FFNx.toml  settings.xml
tauri-app/: package.json  tailwind.config.js
tauri-app/src/: main.tsx  store.tsx
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/resources/: ff7.json
tauri-app/src-tauri/src/: main.rs  seventh_heaven.rs  steam_manager.rs  wine_manager.rs
tauri-app/src-tauri/src/wine_manager/: config.rs  winetricks.rs
tauri-app/src/routes/: config.tsx  debug.tsx  root.tsx  run.tsx
